--- a/css/Professional.css
+++ b/css/Professional.css
@@ -104,7 +104,7 @@ body {
     color: white;
 }
 
-.services-section, .specialties-section, .reviews-section {
+.services-section, .reviews-section,.bookings-section {
     margin-top: 40px;
     background-color: white;
     padding: 20px;
@@ -137,4 +137,33 @@ h2 {
     text-align: center;
     padding: 10px 0;
     margin-top: 40px;
+}
+
+/* النافذة المنبثقة */
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* خلفية شفافة */
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.close-popup {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
 }
