--- a/css/Professional.css
+++ b/css/Professional.css
@@ -167,3 +167,17 @@ h2 {
     font-size: 24px;
     cursor: pointer;
 }
+
+.btn-logout {
+    background-color: #ff4d4d; /* لون الخلفية للزر */
+    color: white; /* لون النص للزر */
+    border: none;
+    padding: 10px 20px;
+    margin-top: 10px; /* للتباعد العمودي بين الأزرار */
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.btn-logout:hover {
+    background-color: #ff3333; /* لون الخلفية عند التمرير */
+}
