--- a/css/Professional.css
+++ b/css/Professional.css
@@ -181,3 +181,62 @@ h2 {
 .btn-logout:hover {
     background-color: #ff3333; /* لون الخلفية عند التمرير */
 }
+
+
+/* --------------------------------------------------------------------- */
+
+.services-section h2 {
+    font-size: 24px;
+    color: #333;
+    margin-bottom: 10px;
+}
+.services-section ul {
+    list-style-type: none;
+    padding: 0;
+}
+.services-section ul li {
+    background-color: #e9ecef;
+    border-radius: 4px;
+    margin: 5px 0;
+    padding: 10px;
+    font-size: 16px;
+    color: #333;
+}
+.services-section h3 {
+    font-size: 20px;
+    color: #333;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+.services-section form {
+    display: flex;
+    flex-direction: column;
+}
+.services-section label {
+    font-size: 16px;
+    margin-bottom: 5px;
+    color: #333;
+}
+.services-section input[type="text"] {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    width: 25%;
+}
+.services-section button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    width: 10%;
+
+}
+.services-section button:hover {
+    background-color: #0056b3;
+}
